arm/coproc: First draft of generic remote processors framework
Both coproc core and coproc scheduler are integrated into
the framework.

The patch also contains functional for parsing coproc configuration
for dom0 and passing needed coproc to dom0 device tree.

Signed-off-by: Oleksandr Tyshchenko <olekstysh@gmail.com>

--- a/xen/arch/arm/Kconfig
+++ b/xen/arch/arm/Kconfig
@@ -50,6 +50,11 @@ config HAS_ITS
         prompt "GICv3 ITS MSI controller support" if EXPERT = "y"
         depends on HAS_GICV3
 
+config HAS_COPROC
+	bool "Remote processors framework (EXPERIMENTAL)"
+	default y
+	depends on ARM
+
 endmenu
 
 menu "ARM errata workaround via the alternative framework"
