Initial implementation of vgpu-img
Signed-off-by: Oleksandr Andrushchenko <oleksandr_andrushchenko@epam.com>

--- a/xen/arch/arm/Kconfig
+++ b/xen/arch/arm/Kconfig
@@ -54,6 +54,7 @@ config HAS_COPROC
 	bool "Remote processors framework (EXPERIMENTAL)"
 	default y
 	depends on ARM
+	source "arch/arm/coproc/Kconfig"
 
 endmenu
 
