--- a/xen/arch/arm/coproc/plat/Makefile
+++ b/xen/arch/arm/coproc/plat/Makefile
@@ -1,2 +1,3 @@
-subdir-y += gx6xxx
-obj-y += coproc_xxx.o
+subdir-$(CONFIG_COPROC_GSX6XX) += gx6xxx
+subdir-$(CONFIG_COPROC_GSX_IMG) += vgpu_img
+obj-$(CONFIG_COPROC_XXX) += coproc_xxx.o
